--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: 끄적끄적
 email: min9nim@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  이런저런 기술관련 내용을 적어 보려고요..
+  이런저런 기술관련 이야기들
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: min9nim
