--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ asset_url: /assets
 plugins:
   - jekyll-feed
 
+permalink: /:categories/:year/:month/:day/:title:output_ext
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
