--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ asset_url: /assets
 plugins:
   - jekyll-feed
 
-permalink: /:categories/:year/:month/:day/:title:output_ext
+permalink: /:categories/:year/:month/:title:output_ext
 
 
 # Exclude from processing.
