--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,10 @@ permalink: /:categories/:year/:month/:title:output_ext
 port : 4000
 host : 0.0.0.0
 
+# 페이징
+paginate: 10
+
+
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
