--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,19 @@ paginate_path: "/page/:num/"
 
 
 
+navigation:
+ - title: Home
+   url: /index.html
+ - title: About
+   url: /about
+ - title: Categories
+   url: /category
+ - title: Contact
+   url: /contact
+
+
+   
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
