--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,8 @@ facebook_comments: true
 
 # Build settings
 markdown: kramdown
-theme: minima
+# theme: minima
+theme: jekyll-whiteglass
 asset_url: /assets
 plugins:
   - jekyll-feed
