--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "Practical coding"
-author: mg.song
+title: Practical coding
 email: min9nim@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  SW개발에 대한 이야기
+  SW 개발에 대한 이야기
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
@@ -26,7 +25,7 @@ tistory_username : minq
 twitter_username: min9nim
 twitter_username2: smg529
 facebook_username:  min9nim
-google_analytics: false
+google_analytics: true
 facebook_comments: true
 
 # Build settings
@@ -36,32 +35,35 @@ theme: jekyll-whiteglass
 asset_url: /assets
 plugins:
   - jekyll-feed
+  - jekyll-archives
   - jekyll-paginate
-
-#permalink: /:categories/:year/:month/:title:output_ext
-permalink: /:year/:month/:title:output_ext
+  - jekyll-sitemap
 
 port : 4000
 host : 0.0.0.0
 
-# 페이징
-paginate: 10
-paginate_path: "/page/:num/"
+permalink: /:year/:month/:title/
+paginate_path: /posts/:num/
+paginate: 5
 
+jekyll-archives:
+  enabled:
+    - categories
+    - tags
+  layout: category_archives
+  permalinks:
+    category: /categories/:name/
+    tag: /tags/:name/
 
 
 navigation:
- - title: Home
-   url: /index.html
  - title: About
    url: /about
  - title: Categories
    url: /category
- - title: Contact
-   url: /contact
-
-
-   
+ - title: Archives
+   url: /archives
+ 
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
