theme 설정만 변경

--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,8 @@ facebook_comments: true
 
 # Build settings
 markdown: kramdown
-# theme: minima
-theme: jekyll-whiteglass
+theme: minima
+# theme: jekyll-whiteglass
 asset_url: /assets
 plugins:
   - jekyll-feed
