--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: min9nim@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   SW 개발에 대한 이야기
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://min9nim.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 github_username: min9nim
 tistory_username : minq
