--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Practical coding
+
+#title: Practical coding
+title: 학습하고 적용하고 공유하자
 email: min9nim@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   SW 개발에 대한 이야기
